--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@ body {
   font-family: 'Almarai', sans-serif;
 } */
 .swiper_container {
-  height: 55rem;
+  /* height: 5rem; */
   padding: 2rem 0;
   position: relative;
 }
@@ -101,7 +101,7 @@ body {
 
 @media (max-width: 500px) {
   .swiper_container {
-    height: 55rem;
+    /* height: 55rem; */
   }
   .swiper-slide {
     width: 28rem !important;
@@ -269,23 +269,22 @@ body {
   }
 }
 .landing2 {
-  background-image: url("./assets/liyamain.jpg");
+  background-image: url("./assets/liyamain.jp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
 .landing3 {
-  background-image: url("./assets/liya3.jpg");
+  background-image: url("./assets/liya3.jp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 20%;
 }
 .landing {
-  background-image: url("./assets/liya2.jpg");
+  background-image: url("https://res.cloudinary.com/dvl38skbc/image/upload/v1685967571/streetically/E9D9A4DA-5B2C-488B-910D-89336EF118A1_cdtlgd.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  animation: zoom-in-fade 4s ease-in-out;
 }
 @keyframes zoom-in-fade {
   0% {
