--- a/src/App.css
+++ b/src/App.css
@@ -269,25 +269,13 @@ body {
   }
 }
 .landing2 {
-  background-image: url("https://res.cloudinary.com/dvl38skbc/image/upload/v1685968017/streetically/DAE6A0C0-E8CA-44B5-AAAD-D6A0527BB686_bypce9.jpg");
+  background-image: url("https://res.cloudinary.com/dvl38skbc/image/upload/v1686831224/Wale%20adebisi/AF94389C-B75D-4A25-94EF-499C5EA23A89_navng6.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-}
-.landing3 {
-  background-image: url("./assets/liya3.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 20%;
 }
 .landing {
-  background-image: url("https://res.cloudinary.com/dvl38skbc/image/upload/v1685967571/streetically/E9D9A4DA-5B2C-488B-910D-89336EF118A1_cdtlgd.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-}
-.aboutlanding {
-  background-image: url("https://res.cloudinary.com/dvl38skbc/image/upload/v1686158374/streetically/B10A5F0F-3729-44DE-AE5B-454761CFA2BA_wmcddd.jpg");
+  background-image: url("https://res.cloudinary.com/dvl38skbc/image/upload/v1686830821/Wale%20adebisi/3A554D77-67AF-4D1A-A226-06E69E3B0E2B_ulzapg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
